Jongo'ish changesets invoking added + code cleaning