@@ -5,6 +5,7 @@ import com.mongodb.MongoClient;
 import com.mongodb.MongoCredential;
 import com.mongodb.ServerAddress;
 import org.apache.commons.lang3.StringUtils;
+import org.jongo.Jongo;
 import org.monjeez.changeset.ChangeEntry;
 import org.monjeez.dao.ChangeEntryDao;
 import org.monjeez.exception.MonjeezChangesetException;
@@ -12,20 +13,20 @@ import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.InitializingBean;
 
-import java.lang.reflect.Constructor;
 import java.lang.reflect.InvocationTargetException;
 import java.lang.reflect.Method;
 import java.net.UnknownHostException;
-import java.util.Arrays;
 import java.util.List;
-import java.util.Set;
 
+import static java.util.Arrays.asList;
+import static org.apache.commons.lang3.StringUtils.isNotBlank;
 import static org.monjeez.utils.MonjeezAnnotationUtils.createChangeEntryFor;
 import static org.monjeez.utils.MonjeezAnnotationUtils.fetchChangelogsAt;
 import static org.monjeez.utils.MonjeezAnnotationUtils.fetchChangesetsAt;
 
 /**
  * Monjeez runner
+ * 
  * @author lstolowski
  * @since 26/07/2014
  */
@@ -42,42 +43,37 @@ public class Monjeez  implements InitializingBean {
   private String changelogsBasePackage;
 
   private ChangeEntryDao changeEntryDao;
-  
 
+
+  /**
+   * For Spring users: executing monjeez after bean is created in the Spring context
+   * @throws Exception
+   */
   @Override
   public void afterPropertiesSet() throws Exception {
-    
-    if (StringUtils.isBlank(dbName)) {
-      throw new IllegalStateException("DB name is not set");
-    }
-    if (StringUtils.isBlank(changelogsBasePackage)) {
-      throw new IllegalStateException("Base package for changelogs scanning (setChangelogsBasePackage(String)) is not set");
-    }
-
-    if(isEnabled()){
-      execute();
-    }
-    
+    execute();
   }
 
   void execute() throws UnknownHostException, NoSuchMethodException, IllegalAccessException, 
                         InvocationTargetException, InstantiationException {
-
+    if(!isEnabled()){
+      logger.info("Monjeez is disabled. Exiting.");
+      return;
+    }
+    validateConfig();
+    
+    
     MongoClient mongoClient = getMongoClient();
     DB db = mongoClient.getDB(dbName);
     changeEntryDao = new ChangeEntryDao(db);
     
     changeEntryDao.checkConnection();
 
-    final Set<Class<?>> changelogClasses = fetchChangelogsAt(changelogsBasePackage);
-
-    for (Class<?> changelogClass : changelogClasses) {
+    for (Class<?> changelogClass : fetchChangelogsAt(changelogsBasePackage)) {
       
-      Constructor<?> constructor = changelogClass.getConstructor();
-      Object changesetInstance = constructor.newInstance();
+      Object changesetInstance = changelogClass.getConstructor().newInstance();
 
       List<Method> changesetMethods = fetchChangesetsAt(changesetInstance.getClass());
-
 
       for (Method changesetMethod : changesetMethods) {
 
@@ -90,35 +86,47 @@ public class Monjeez  implements InitializingBean {
             changesetMethod.invoke(changesetInstance, db);
             changeEntryDao.save(changeEntry);
 
-          } else if (changesetMethod.getParameterCount() == 0) {
+          }
+          else if (changesetMethod.getParameterCount() == 1 && changesetMethod.getParameterTypes()[0].equals(Jongo.class)) {
+            logger.debug("method with Jongo argument");
+
+            changesetMethod.invoke(changesetInstance, new Jongo(db));
+            changeEntryDao.save(changeEntry);
+
+          }
+          else if (changesetMethod.getParameterCount() == 0) {
             logger.debug("method with no params");
             
             changesetMethod.invoke(changesetInstance);
             changeEntryDao.save(changeEntry);
 
-          } else {
+          } 
+          else {
             throw new MonjeezChangesetException("Changeset method has wrong arguments list: " + changeEntry);
           }
-          
-          
         }
       }
 
     }
-
-
   }
 
-  
+  private void validateConfig() {
+    if (StringUtils.isBlank(dbName)) {
+      throw new IllegalStateException("DB name is not set");
+    }
+    if (StringUtils.isBlank(changelogsBasePackage)) {
+      throw new IllegalStateException("Base package for changelogs scanning (setChangelogsBasePackage(String)) is not set");
+    }
+  }
 
   private MongoClient getMongoClient() throws UnknownHostException {
     MongoClient mongoClient;
     if (auth != null) {
       MongoCredential credentials = MongoCredential.createMongoCRCredential(
               auth.getDbName(),
-              StringUtils.isNotBlank(auth.getDbName()) ? auth.getDbName() : dbName,
+              isNotBlank(auth.getDbName()) ? auth.getDbName() : dbName,
               auth.getPassword().toCharArray());
-      mongoClient = new MongoClient(new ServerAddress(host), Arrays.asList(credentials));
+      mongoClient = new MongoClient(new ServerAddress(host), asList(credentials));
     } else {
       mongoClient = new MongoClient(new ServerAddress(host));
     }
